2011-05-24  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Parse and filter stdout/stderr of
	  commands.

2011-01-20  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/driverio.c: fix non-NULL terminated argument list in
	  vstralloc()

2011-05-18  Jean-Louis Martineau <martineau@zmanda.com>
	* Fix for default BSDTCP auth.

2011-05-18  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c,
	  common-src/conffile.c: Change default auth to bsdtcp.
	* NEWS, ReleaseNotes: Change default auth to bsdtcp.
	* example/amanda-client.conf.in,
	  example/amanda.conf.in: Change default auth to bsdtcp.
	* man/xml-source/amanda-auth.7.xml,
	  man/xml-source/amanda-client.conf.5.xml,
	  man/xml-source/amanda.conf.5.xml,
	  man/xml-source/amrecover.8.xml: Change default auth to bsdtcp.

2011-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: s/NDMP4_/NDMP9_/g

2011-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amrecover.8.xml: Add an AUTH section.

2011-05-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Controller.pm, perl/Amanda/Taper/Protocol.pm,
	  perl/Amanda/Taper/Worker.pm: Remove uneeded '#! @PERL@' first line.

2011-05-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.pl: s/Catched/Caught/

2011-05-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.pl: Trap ctrl-c while backup is running, resume by
	  sending email and log rotation.

2011-05-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Call $device->finish() before
	  $device->read_label(), A device must be in ACCESS_NULL for read_label.

2011-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Do not crash on unterminated quoted string.

2011-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amzfs-sendrecv.pl: Implement restore.
	  Generate index with only '/'.